unpackaged/main/default/objects/FSL__Work_Rule__c/fields/FSL__Boolean_Operator__c.field-meta.xml
<CustomField>
    <fullName>FSL__Boolean_Operator__c</fullName>
    <inlineHelpText>Comparer une propriété de service numérique à une propriété de ressource numérique</inlineHelpText>
    <label>Boolean Operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>=</fullName>
                <default>true</default>
                <label>=</label>
            </value>
            <value>
                <fullName>&lt;=</fullName>
            </value>
            <value>
                <fullName>&gt;=</fullName>
            </value>
            <value>
                <fullName>&gt;</fullName>
            </value>
            <value>
                <fullName>&lt;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>