unpackaged/main/default/objects/FSL__Work_Rule__c/fields/FSL__Break_Duration__c.field-meta.xml
<CustomField>
    <fullName>FSL__Break_Duration__c</fullName>
    <inlineHelpText>Détermine la durée des pauses créées.
Si vous ne souhaitez pas créer de pause, laissez ce champ vide.</inlineHelpText>
    <label>Break Duration (minutes)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>