unpackaged/main/default/objects/FSL__Work_Rule__c/fields/FSL__Break_Start__c.field-meta.xml
<CustomField>
    <fullName>FSL__Break_Start__c</fullName>
    <inlineHelpText>Détermine l&#39;heure de début de pause minimum (au format : {HH:MM}) pour la création de pauses. 
Si vous ne souhaitez pas créer des pauses, laissez ce champ vide.</inlineHelpText>
    <label>Break Start</label>
    <length>5</length>
    <type>Text</type>
</CustomField>