unpackaged/main/default/objects/FSL__Work_Rule__c/fields/FSL__CountTimeResolution__c.field-meta.xml
<CustomField>
    <fullName>FSL__CountTimeResolution__c</fullName>
    <inlineHelpText>La résolution de temps du décompte.</inlineHelpText>
    <label>Count Time Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
                <default>true</default>
                <label>Daily</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>