unpackaged/main/default/objects/FSL__Work_Rule__c/fields/FSL__Crew_Max_Extra_Resources__c.field-meta.xml
<CustomField>
    <fullName>FSL__Crew_Max_Extra_Resources__c</fullName>
    <inlineHelpText>Saisissez une valeur si vous souhaitez limiter le nombre de ressources de service supplémentaires qui peuvent être ajoutées à l’équipe. Laissez vide si n’importe quel nombre de ressources de service peut être ajouté.</inlineHelpText>
    <label>Maximum Additional Service Resources</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>