unpackaged/main/default/objects/FSL__Work_Rule__c/fields/FSL__Crew_Resources_Availability__c.field-meta.xml
<CustomField>
    <fullName>FSL__Crew_Resources_Availability__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Lorsque cette option est sélectionnée, comparez le champ Taille d&#39;équipe minimale de l&#39;ordre d&#39;exécution ou de l&#39;élément d&#39;ordre d&#39;exécution aux membres d&#39;équipe de service actuellement disponibles. 
Sinon, comparez la Taille d&#39;équipe minimale au champ de taille de l&#39;équipe de service.</inlineHelpText>
    <label>Consider Service Crew Membership</label>
    <type>Checkbox</type>
</CustomField>