unpackaged/main/default/objects/FSL__Work_Rule__c/fields/FSL__DefaultLimit__c.field-meta.xml
<CustomField>
    <fullName>FSL__DefaultLimit__c</fullName>
    <inlineHelpText>Une limite du décompte. La limite de la ressource de service remplace cette valeur.</inlineHelpText>
    <label>Default Limit</label>
    <precision>14</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>