unpackaged/main/default/objects/FSL__Work_Rule__c/fields/FSL__Is_Fixed_Gap__c.field-meta.xml
<CustomField>
    <fullName>FSL__Is_Fixed_Gap__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Si cette option est activée, les écarts entre les services sont basés sur le champ d&#39;écart minimal, sans calcul de trajet.</inlineHelpText>
    <label>Fixed Gap</label>
    <type>Checkbox</type>
</CustomField>