unpackaged/main/default/objects/FSL__Work_Rule__c/fields/FSL__Minimum_Gap__c.field-meta.xml
<CustomField>
    <fullName>FSL__Minimum_Gap__c</fullName>
    <inlineHelpText>Détermine l&#39;écart minimal entre les services. Si l&#39;écart fixe est activé, détermine l&#39;écart entre les services.</inlineHelpText>
    <label>Minimum Gap (minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>