unpackaged/main/default/objects/FSL__Work_Rule__c/fields/FSL__Travel_To_Home__c.field-meta.xml
<CustomField>
    <fullName>FSL__Travel_To_Home__c</fullName>
    <inlineHelpText>Détermine le nombre des minutes disponibles pour le trajet après la fin de la journée du calendrier de la ressource (aux frais de la ressource).
Lorsque ce champ est vide, tout trajet suivant la fin de la journée de travail est valide.</inlineHelpText>
    <label>Travel To Home (minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>