unpackaged/main/default/objects/FSL__Work_Rule__c/fields/FSL__WorkRule_End_DateTime_Field__c.field-meta.xml
<CustomField>
    <fullName>FSL__WorkRule_End_DateTime_Field__c</fullName>
    <description>Represents the DateTime field name used by Time-Phased work rules as a end value. Required if Time-Phased equals true</description>
    <inlineHelpText>Le nom du champ Date-Heure dans l&#39;objet de liaison qui représente son heure de fin</inlineHelpText>
    <label>End Date Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>