unpackaged/main/default/objects/FSL__Work_Rule__c/fields/FSL__WorkRule_Start_DateTime_Field__c.field-meta.xml
<CustomField>
    <fullName>FSL__WorkRule_Start_DateTime_Field__c</fullName>
    <description>Represents the DateTime field name used by Time-Phased work rules as a start value. Required if Time-Phased equals true</description>
    <inlineHelpText>Le nom du champ Date-Heure dans l&#39;objet de liaison qui représente son heure de début</inlineHelpText>
    <label>Start Date Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>